popart/src/objects/ArtMash_Caption__c.object
<CustomObject>
    <description>Captions for an image</description>
    <fields>
        <fullName>ArtMash_Picture__c</fullName>
        <description>Picture this caption is for</description>
        <inlineHelpText>Picture this caption is for</inlineHelpText>
        <label>ArtMash Picture</label>
        <referenceTo>ArtMash_Picture__c</referenceTo>
        <relationshipLabel>Captions</relationshipLabel>
        <relationshipName>ArtMash_Captions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Caption_Title__c</fullName>
        <label>Caption Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caption__c</fullName>
        <description>What is the caption?</description>
        <inlineHelpText>What is the caption?</inlineHelpText>
        <label>Caption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <description>the email address of the submitter</description>
        <inlineHelpText>the email address of the submitter</inlineHelpText>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <description>who submitted this caption?</description>
        <inlineHelpText>who submitted this caption?</inlineHelpText>
        <label>Submitter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ArtMash Caption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Caption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ArtMash Captions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>